--- a/manifest.json
+++ b/manifest.json
@@ -4,39 +4,35 @@
   "version": "0.0.1",
   "version_name": "0.0.1 beta",
   "browser_action": {
-    "default_icon": "icon.png",
-    "default_title": "youtube library"
-  },
-  "oauth2": {
-    "client_id": "245406327895-ms26umc4reakklm4270b8nubbl04lu3e.apps.googleusercontent.com",
-    "scopes": [
-      "https://www.googleapis.com/auth/youtube"
-    ]
+    "default_icon": "icon1.png",
+    "default_title": "fluxfm playlists"
   },
   "permissions": [
-    "identity",
     "activeTab",
-    "storage"
+    "tabs",
+    "nativeMessaging",
+    "storage",
+    "contextMenus",
+    "https://www.googleapis.com/youtube/v3/search"
   ],
+  "background": {
+    "scripts": ["background.js"],
+    "persistent": false
+  },
   "content_scripts": [
     {
       "matches": [
-        "http://*.youtube.com/*",
-        "https://*.youtube.com/*"
+        "https://www.youtube.com/*"
       ],
       "js": [
-        "jquery-3.2.0.min.js",
-        "oauth.js",
-        "json_inject.js"
+        "jquery-2.2.1.min.js",
+        "jq.tmpl-1.0.4.js",
+        "jquery.jplayer-2.9.2.min.js",
+        "jquery-dateFormat.min.js",
+        "content.js"
       ]
     }
   ],
-  "background": {
-    "scripts": [
-      "background.js"
-    ],
-    "persistent": false
-  },
   "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
   "manifest_version": 2
 }
